# banking

./: README.md
CW-Real-Code (2)/: admin.filekey  flaskdat(previous).sqlite3  flaskdat.sqlite3  main.py  pyproject.toml  replit_zip_error_log.txt  richy.filekey  system.filekey  system_2.filekey
CW-Real-Code (2)/security/: mfa.py
CW-Real-Code (2)/static/: index.css  login-page.css  registration-page.css  style.css
CW-Real-Code (2)/templates/: admin.html  admincontrols.html  javascriptregistration.html  loginpage.html  passwordreset.html  recovery.html  registration.html  userdashboard.html
CW-Real-Code (2)/templates/mfa/: setup_2fa.html  verify_2fa.html
